--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
                     <div class="form-group">
                         <input type="text" name="youtubelink" class="form-control" id="link" placeholder="Youtube url" required />
                     </div>
-                    <input type="submit" class="btn btn-outline-primary" value="Convert">
+                    <button type="submit" class="btn btn-outline-primary"><i class="fa fa-refresh" aria-hidden="true"></i> Convert</button>
                 </form>
             </div>
         </div>
@@ -56,7 +56,10 @@
                             <td><span id="other">-</span></td>
                         </tr>
                         <tr>
-                            <td><a class="btn btn-outline-primary disabled" href="#" id="download"><i class="fa fa-cloud-download" aria-hidden="true"></i> Listen/download</a></td>
+                            <td>
+                                <a class="btn btn-outline-primary disabled" href="#" id="download"><i class="fa fa-cloud-download" aria-hidden="true"></i> Listen/download</a>
+                                <a class="btn btn-outline-danger disabled" href="#" id="remove" data-id="">Remove</a>
+                            </td>
                             <td></td>
                         </tr>
                     </tbody>
@@ -70,12 +73,12 @@
     <script>
         $(document).ready(function() {
             $("#frm-convert").submit(function(e) {
-                $("#frm-convert input[type=submit]").val("Converting... Please wait");
+                $("#frm-convert button[type=submit]").html("<i class=\"fa fa-refresh\" aria-hidden=\"true\"></i> Converting... Please wait");
 
                 e.preventDefault();
                 $.get($(this).attr("action"), { youtubelink: $("#link").val() },  function(data) {
                     $("pre").text(JSON.stringify(data, null, 4));
-                    $("#frm-convert input[type=submit]").val("Convert");
+                    $("#frm-convert button[type=submit]").html("<i class=\"fa fa-refresh\" aria-hidden=\"true\"></i> Convert");
 
                     if(data.error) {
                         $("#error").html("<i class=\"fa fa-check\" aria-hidden=\"true\"></i>");
@@ -86,6 +89,7 @@
                         $("#other").text("-");
                         $("#download").attr("href", "#");
                         $("#download").addClass("disabled");
+                        $("#remove").addClass("disabled");
                     } else {
                         $("#error").html("<i class=\"fa fa-times\" aria-hidden=\"true\"></i>");
                         $("#error-message").text("-");
@@ -94,8 +98,16 @@
                         $("#title").text(data.title + " (" + data.alt_title + ")");
                         $("#download").attr("href", data.file);
                         $("#download").removeClass("disabled");
+                        $("#remove").removeClass("disabled");
+                        $("#remove").data("id", data.youtube_id);
                         $("#other").html("Youtube id: " + data.youtube_id + "<br/>Size: " + data.file_size + " bytes<br/>Uploaded at: " + data.uploaded_at.date);
                     }
+                });
+            });
+
+            $("#remove").click(function() {
+                $.get("convert.php", { delete: $(this).data("id") }, function(data) {
+                    alert(data.message);
                 });
             });
         });
